# ProyectoQT

./: README.md
Avance1/: Doxyfile  README.md
Avance1/TourismCompass/: CMakeLists.txt  CMakeLists.txt.user.a15561b  addpackage.h  addpackage.ui  databaseheader.h  findpackage.cpp  findpackage.ui  findtourist.cpp  findtourist.h  findtourist.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  registertourist.cpp  registertourist.ui  resource.qrc
Avance1/build-MyTouristManager-Desktop_Qt_6_5_1_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Avance1/build-MyTouristManager-Desktop_Qt_6_5_1_MinGW_64_bit-Release/TourismCompass_autogen/: deps
Propuesta/: README.md
Proyecto Final/: Doxyfile  Makefile  README.md
Proyecto Final/Proyecto_TourismCompass/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
Proyecto Final/Proyecto_TourismCompass/.qt/: QtDeploySupport.cmake
Proyecto Final/Proyecto_TourismCompass/TourismCompass_autogen/: deps  mocs_compilation.cpp
Proyecto Final/TourismCompass/: CMakeLists.txt  Datos_turisticos.db  addpackage.cpp  addpackage.h  addpackage.ui  databaseheader.h  db.s3db  db.s3db-journal  db.s3db.sql  elements.qrc  findpackage.cpp  findpackage.h  findpackage.ui  findtourist.cpp  findtourist.h  findtourist.ui  global.cpp  global.h  loginsystem.cpp  loginsystem.h  loginsystem.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qdb.cpp  qdb.h  registertourist.cpp  registertourist.h  registertourist.ui  registrarturista.cpp  registrarturista.h  resource.qrc
Proyecto Final/build-MyTouristManager-Desktop_Qt_6_5_1_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Proyecto Final/build-MyTouristManager-Desktop_Qt_6_5_1_MinGW_64_bit-Release/.qt/: QtDeploySupport.cmake
Proyecto Final/build-MyTouristManager-Desktop_Qt_6_5_1_MinGW_64_bit-Release/TourismCompass_autogen/: deps
Proyecto Final/docs/html/: addpackage_8cpp.html  addpackage_8h.html  addpackage_8h_source.html  annotated.html  class_add_package-members.html  class_add_package.html  class_find_package-members.html  class_find_package.html  class_find_tourist-members.html  class_find_tourist.html  class_login_system-members.html  class_login_system.html  class_main_window-members.html  class_main_window.html  class_q_d_b-members.html  class_q_d_b.html  class_q_d_b_lite_1_1_d_b-members.html  classes.html  (+39 more)
(+113 files in other folders)
